--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Im sorry it took so long</title>
+    <title>Special Request</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
@@ -13,7 +13,7 @@
             <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHpueGZ3bmZqZzR6eXp3Ymd6ZzR6eXp3Ymd6ZzR6eXp3Ymd6JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/3ohze3kG5qO9DcTUZY/giphy.gif" alt="Cute Cat" id="display-img">
         </div>
         
-        <h1 id="question">Princess, will you be my Valentine? ❤️</h1>
+        <h1 id="question">Princess, will you please be my Valentine? ❤️</h1>
         <p id="sub-text"></p>
 
         <div class="buttons">
