--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Special Request</title>
+    <title>A Special Request for Princess</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
+
     <div class="container" id="main-card">
         <div id="image-space">
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHpueGZ3bmZqZzR6eXp3Ymd6ZzR6eXp3Ymd6ZzR6eXp3Ymd6JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/3ohze3kG5qO9DcTUZY/giphy.gif" alt="Cute Cat" id="display-img">
+            <img src="https://media.tenor.com/79_7V8s9I9YAAAAi/tkthao219-bubududu.gif" alt="Cute Animation" id="display-img">
         </div>
         
         <h1 id="question">Princess, will you please be my Valentine? ❤️</h1>
-        <p id="sub-text"></p>
+        <p id="sub-text">I have a very important question...</p>
 
         <div class="buttons">
             <button id="yes-btn">Yes!</button>
