--- a/index.html
+++ b/index.html
@@ -3,28 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Special Request for Princess</title>
+    <title>For Princess ❤️</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-
-    <div class="container" id="main-card">
+    <div class="container">
         <div id="image-space">
-            <img src="https://media.tenor.com/79_7V8s9I9YAAAAi/tkthao219-bubududu.gif" alt="Cute Animation" id="display-img">
+            <img src="nezuko_start.jpg" alt="Cute Nezuko" id="display-img">
         </div>
         
-        <h1 id="question">Princess, will you please be my Valentine? ❤️</h1>
-        <p id="sub-text">I have a very important question...</p>
+        <div class="text-container">
+            <h1 id="question">Princess, will you please be my Valentine? ❤️</h1>
+        </div>
 
         <div class="buttons">
             <button id="yes-btn">Yes!</button>
             <button id="no-btn">No</button>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
