--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         
         <div class="text-container">
             <h1 id="question">Princess, will you please be my Valentine? ❤️</h1>
+            <p id="sub-text"></p>
         </div>
 
         <div class="buttons">
